--- a/test/fixtures/action_text/rich_texts.yml
+++ b/test/fixtures/action_text/rich_texts.yml
@@ -1,4 +1,4 @@
 # one:
-#   record: name_of_fixture (ClassOfFixture)
+#   record: name_of_fixture 
 #   name: content
 #   body: <p>In a <i>million</i> stars!</p>
