--- a/test/fixtures/departments.yml
+++ b/test/fixtures/departments.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  dep_name: MyString
+IT:
+  dep_name: IT
 
-two:
-  dep_name: MyString
+HR:
+  dep_name: HR
