--- a/test/fixtures/jobs.yml
+++ b/test/fixtures/jobs.yml
@@ -1,23 +1,23 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  title: MyString
-  description: MyText
-  company: MyString
-  work_space_type: 1
-  location: MyString
-  lead_source: MyString
-  active: false
-  created_by_id: 1
-  department_id: 1
+SE:
+  title: "Software Engineer"
+  description: "Looking for a skilled Software Engineer."
+  company: "TechieMinions"
+  work_space_type: 0
+  location: "Lahore"
+  lead_source: "LinkedIn"
+  active: true
+  creator_id: 1
+  department: IT
 
-two:
-  title: MyString
-  description: MyText
-  company: MyString
+PM:
+  title: "Project Manager"
+  description: "Experienced project manager needed."
+  company: "TechieMinions"
   work_space_type: 1
-  location: MyString
-  lead_source: MyString
+  location: "Remote"
+  lead_source: "Indeed"
   active: false
-  created_by_id: 1
-  department_id: 1
+  creator_id: 1
+  department: HR
