--- a/test/fixtures/skills.yml
+++ b/test/fixtures/skills.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  skill_name: MyString
+  skill_name: HTML
 
 two:
-  skill_name: MyString
+  skill_name: CSS
