--- a/test/fixtures/job_skills.yml
+++ b/test/fixtures/job_skills.yml
@@ -1,2 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
+se_html:
+  job: se
+  skill: html
+
+pm_css:
+  job: pm
+  skill: css
