--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -8,20 +8,20 @@
 admin:
   email: admin@example.com
   encrypted_password: <%= Devise::Encryptor.digest(User, 'password') %>
-  role: admin
+  role: 1
   name: Admin
   phone_no: 03124523574
 
 candidate1:
   email: candidate1@example.com
   encrypted_password: <%= Devise::Encryptor.digest(User, 'password') %>
-  role: candidate
+  role: 0
   name: Candidate1
   phone_no: +92 313 2132323
 
 candidate2:
   email: candidate2@example.com
   encrypted_password: <%= Devise::Encryptor.digest(User, 'password') %>
-  role: candidate
+  role: 0
   name: Candidate2
-  phone_no: 0312452357#@!
+  phone_no: 03124523572
